# double-sipm

./: .envrc  README.md  flake.nix  justfile
B1/: CMakeLists.txt
B1/include/: PrimaryGeneratorAction.hh  RunAction.hh
B1/nain4/: nain4.hh
B1/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc
double-sipm/: CMakeLists.txt  double-sipm.cc  generator.cc  generator.hh  geometry.cc  geometry.hh  justfile  materials.cc  materials.hh  vis.mac
double-sipm/macs/: vis.mac
double-sipm/nain4/: nain4.cc
